--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author = axju
 author_email = axel.juraske@short-report.de
 license = MIT
 long_description = file: README.rst
-long_description_content_type = text/plain
+long_description_content_type = text/x-rst
 classifiers =
     Intended Audience :: Developers
     Operating System :: OS Independent
