--- a/setup.cfg
+++ b/setup.cfg
@@ -48,5 +48,5 @@ ignore = E722
 max-line-length = 160
 
 [pylint]
-disable = missing-docstring, bare-except
+disable = missing-docstring, bare-except, super-with-arguments
 max-line-length = 160
