--- a/setup.cfg
+++ b/setup.cfg
@@ -11,14 +11,15 @@ classifiers =
     Intended Audience :: Developers
     Operating System :: OS Independent
     Programming Language :: Python
-    Programming Language :: Python :: 3.5
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
 
 [tox:tox]
 envlist =
-    py{35,36,37,38}, flake8, pylint, cov-report
+    py{37,38,39,310,311}, flake8, pylint, cov-report
 skipt_missing_interpreters = True
 
 [testenv]
@@ -48,5 +49,5 @@ ignore = E722
 max-line-length = 160
 
 [pylint]
-disable = missing-docstring, bare-except, super-with-arguments
+disable = missing-docstring, bare-except, super-with-arguments, consider-using-f-string
 max-line-length = 160
